--- a/reviews/templates/reviews.html
+++ b/reviews/templates/reviews.html
@@ -54,7 +54,7 @@
         </div>
         {% endfor %}
         {% else %}
-        <p>No results have been found.</p>
+        <p>No reviews have been found.</p>
         {% endif %}
     </div>
 </div>
