--- a/static/scss/_partials/portrait-mobile/pages/_login-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_login-page.scss
@@ -6,3 +6,19 @@
 #loginform {
     width: 90vw;
 }
+
+#reset-register-wrapper {
+    width: 100%;
+}
+
+#password-reset-link {
+    width: 40%;
+}
+
+#or-div {
+    width: 10%;
+}
+
+#register-link {
+    width: 40%;
+}
