--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -4,10 +4,14 @@
 {% block page_heading %}User Registration{% endblock %}
 
 {% block content %}
+<div class="registration-wrapper ha">
+<div class="page-headline">Registration</div>
 <p>If you have already an account, you can <a href="{% url 'login' %}">sign in</a></p>
-<form method="POST" action="">
+<form id="registrationform" method="POST" action="">
     {% csrf_token %}
     {{ registration_form | as_bootstrap }}
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button id="submit-registration-btn" type="submit" class="btn">Submit</button>
 </form>
+
+</div>
 {% endblock %}
