--- a/products/templates/productdetail.html
+++ b/products/templates/productdetail.html
@@ -49,22 +49,22 @@
                 <p class="product-description">{{ product.description }}</p>
 
                 <div class="product-stats">
-                    <div class="quickstats-key"><i class="fa fa-eye"></i></div>
-                    <div class="quickstats-value">{{ product.view_count }}</div>
-                    <div class="quickstats-key"><i class="fa fa-comment"></i></div>
+                    <div class="stats-key"><i class="fa fa-eye"></i></div>
+                    <div class="stats-value">{{ product.view_count }}</div>
+                    <div class="stats-key"><i class="fa fa-comment"></i></div>
                     {% if product.review_count > 0 %}
                     <a href="{% url 'get_reviews' product.id %}">{{ product.review_count }}</a>
                     {% else %}
-                    <div class="quickstats-value">{{ product.review_count }}</div>
+                    <div class="stats-value">{{ product.review_count }}</div>
                     {% endif %}
-                    <div class="quickstats-key">Sold: </div>
-                    <div class="quickstats-value"> {{ product.ordered_pcs }}</div>
-                    <div class="quickstats-key">Origin: </div>
-                    <div class="quickstats-value"> {{ product.origin }}</div>
-                    <div class="quickstats-key">Since: </div>
-                    <div class="quickstats-value"> {{ product.first_developed }}</div>
-                    <div class="quickstats-key">Use: </div>
-                    <div class="quickstats-value"> {{ product.use }}</div>
+                    <div class="stats-key">Sold: </div>
+                    <div class="stats-value"> {{ product.ordered_pcs }}</div>
+                    <div class="stats-key">Origin: </div>
+                    <div class="stats-value"> {{ product.origin }}</div>
+                    <div class="stats-key">Since: </div>
+                    <div class="stats-value"> {{ product.first_developed }}</div>
+                    <div class="stats-key">Use: </div>
+                    <div class="stats-value"> {{ product.use }}</div>
                 </div>
                 <br>
                 <p><b>Our price: {{ product.price }} EUR</b></p>
