--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -18,11 +18,11 @@
         <button type="submit" class="btn btn-default"><b>Login</b></button>
     </form>
     <div id="reset-register-wrapper">
-        <div id="password-reset-link btn">
+        <div id="password-reset-link" class="btn">
             <a href="{% url 'password_reset' %}"><b>Reset Password</b></a>
         </div>
         <div id="or-div"> or </div>
-        <div id="register-link btn">
+        <div id="register-link btn" class="btn">
             <a href="{% url 'registration' %}"><b>Register here</b></a>
         </div>
     </div>
