--- a/static/scss/_partials/portrait-mobile/pages/_password-reset-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_password-reset-page.scss
@@ -16,11 +16,15 @@
 
 #password-reset-label {
     padding-right: 5px;
-    width: 30%;
+    width: 44%;
 }
 
 .passwordresetform {
     width: 50%;
     display: flex;
     flex-wrap: wrap;
+}
+
+.passwordresetform #email-input-field {
+    width: 100%;
 }
