--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="password-reset-wrapper ha">
-    <div class="page-headline">Password reset</div>
+    <div class="page-headline ha">Password reset</div>
 
     <form method="post" class="accountform ha">
         <p>Please specify your email address <br> to receive instructions for resetting it.</p>
