--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="registration-wrapper ha">
-<div class="page-headline">Registration</div>
+<div class="page-headline ha">Registration</div>
 <p>If you have already an account, you can <a href="{% url 'login' %}">sign in</a></p>
 <form id="registrationform" method="POST" action="">
     {% csrf_token %}
