--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -47,24 +47,35 @@
     font-size: 5.5vw;
     background-color: lightblue;
   }
-  #reset-register-wrapper {
+  #reset-register-wrapper,
+  .login-btn-wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     font-family: "Dosis", sans-serif;
     font-size: 5.5vw;
     width: 100%;
-    margin-top: 2vw;
+    margin-top: 12vw;
     margin-bottom: 2vw;
   }
   #password-reset-link {
-    width: 40%;
+    width: 40vw;
+    background-color: orange;
+    color: black;
+    font-family: "Dosis", sans-serif;
+    font-size: 5.5vw;
   }
   #or-div {
-    width: 20%;
+    width: 10vw;
+    font-family: "Dosis", sans-serif;
+    font-size: 5.5vw;
   }
   #register-link {
-    width: 40%;
+    width: 40vw;
+    background-color: #00aa00;
+    color: black;
+    font-family: "Dosis", sans-serif;
+    font-size: 5.5vw;
   }
   .password-reset-wrapper {
     height: 70vh;
@@ -318,6 +329,9 @@
   }
   .navbar-nav {
     margin: 14.5px 0;
+  }
+  .navbar-fixed-top .navbar-collapse {
+    max-height: 56vh;
   }
   #brandicon {
     color: #b61d18;
