--- a/static/scss/_partials/portrait-mobile/_portrait-mobile.scss
+++ b/static/scss/_partials/portrait-mobile/_portrait-mobile.scss
@@ -70,6 +70,10 @@
         margin: 14.5px 0;
     }
 
+    .navbar-fixed-top .navbar-collapse {
+        max-height: 56vh;
+    }
+
     #brandicon {
         color: rgb(182, 29, 24);
         font-size: 6vw;
