--- a/static/scss/_partials/portrait-mobile/pages/_login-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_login-page.scss
@@ -14,25 +14,37 @@
     background-color: lightblue;
 }
 
-#reset-register-wrapper {
+#reset-register-wrapper,
+.login-btn-wrapper {
     display: flex;
     font-family: $dosisFont;
     font-size: 5.5vw;
     width: 100%;
+
     margin: {
-        top: 2vw;
+        top: 12vw;
         bottom: 2vw;
     }
 }
 
 #password-reset-link {
-    width: 40%;
+    width: 40vw;
+    background-color: orange;
+    color: black;
+    font-family: $dosisFont;
+    font-size: 5.5vw;
 }
 
 #or-div {
-    width: 20%;
+    width: 10vw;
+    font-family: $dosisFont;
+    font-size: 5.5vw;
 }
 
 #register-link {
-    width: 40%;
+    width: 40vw;
+    background-color: rgb(0, 170, 0);
+    color: black;
+    font-family: $dosisFont;
+    font-size: 5.5vw;
 }
