--- a/static/scss/_partials/portrait-mobile/_portrait-mobile.scss
+++ b/static/scss/_partials/portrait-mobile/_portrait-mobile.scss
@@ -71,7 +71,7 @@
     }
 
     .navbar-fixed-top .navbar-collapse {
-        max-height: 56vh;
+        max-height: 380px;
     }
 
     #brandicon {
