--- a/static/scss/_partials/portrait-mobile/pages/_profile-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_profile-page.scss
@@ -6,17 +6,11 @@
     margin-top: 3vw;
 }
 
-.orderline-header {
-    font-size: 4.8vw;
-
-}
-
 .profile-tabs {
     font-size: 7.0vw;
 }
 
 .form-control,
-.orderline-value,
 .update-address-btn {
     font-family: $dosisFont;
     font-size: 5.5vw;
@@ -44,27 +38,39 @@
 }
 
 .orderline-order-header {
-    width: 50%;
+    width: 50vw;
+    font-size: 4.5vw;
+
 }
 
 .orderline-product-header {
-    width: 30%;
+    width: 30vw;
+    font-size: 4.5vw;
+
 }
 
 .orderline-quantity-header {
-    width: 20%;
+    width: 20vw;
+    font-size: 4.5vw;
+
 }
 
 .orderline-order-value {
-    width: 50%;
+    width: 50vw;
+    font-size: 4.5vw;
+
 }
 
 .orderline-product-value {
-    width: 30%;
+    width: 30vw;
+    font-size: 4.5vw;
+
 }
 
 .orderline-quantity-value {
-    width: 20%;
+    width: 20vw;
+    font-size: 4.5vw;
+
 }
 
 .update-address-btn {
