--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -6,15 +6,17 @@
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <script type="text/javascript">
     //<![CDATA[
-        Stripe.publishableKey = '{{ publishable }}';
+    Stripe.publishableKey = '{{ publishable }}';
     //]]>
 </script>
 <script type="text/javascript" src="{% static 'js/stripe.js' %}"></script>
 {% endblock %}
 
 {% block content %}
-<div class="row row-flex">
-    {% for item in cart_items %}
+<div class="checkout-wrapper ha">
+
+    <div class="row row-flex">
+        {% for item in cart_items %}
         <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
             <div class="panel-body">
                 <img class="product-image" src="{{ MEDIA_URL }}{{product.image}}" alt="image of {{product.name}}">
@@ -26,42 +28,45 @@
                 </div>
             </div>
         </div>
-    {% endfor %}
-</div>
-<div class="row">
-    <p>Total</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-    {% if total < 50 %}
-    <p>(incl. {{ shippingfee }} EUR shipping fee)</p>
-    {% else %}
-    <p>{{shippingfee}} Shipping</p>
-    {% endif %}
-</div>
-
-<form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
-    <legend>Payment Details</legend>
-
-    <div id="credit-card-errors" style="display: none;">
-        <div class="alert-message block-message error" id="stripe-error-message"></div>
+        {% endfor %}
     </div>
-
-    <div class="form-group col-md-6">
-        {% if order_form.full_name.value == "" %}
-        <p>Please enter your shipping address</p>
+    <div class="row">
+        <p>Total</p>
+        <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
+        {% if total < 50 %}
+        <p>(incl. {{ shippingfee }} EUR shipping fee)</p>
         {% else %}
-        <p>Your current shipping address</p>
+        <p>{{shippingfee}} Shipping</p>
         {% endif %}
-        {{ order_form | as_bootstrap }}
     </div>
 
-    <div class="form-group col-md-6">
-        <p>Please enter your payment details</p>
-        {{ payment_form | as_bootstrap }}
-    </div>
+    <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
+        <legend>Payment Details</legend>
 
-    {% csrf_token %}
-    <div class="form-group col-md-12">
-        <input class=" btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
-    </div>
-</form>
+        <div id="credit-card-errors" style="display: none;">
+            <div class="alert-message block-message error" id="stripe-error-message"></div>
+        </div>
+
+        <div class="form-group col-md-6">
+            {% if order_form.full_name.value == "" %}
+            <p>Please enter your shipping address</p>
+            {% else %}
+            <p>Your current shipping address</p>
+            {% endif %}
+            {{ order_form | as_bootstrap }}
+        </div>
+
+        <div class="form-group col-md-6">
+            <p>Please enter your payment details</p>
+            {{ payment_form | as_bootstrap }}
+        </div>
+
+        {% csrf_token %}
+        <div class="form-group col-md-12">
+            <input class=" btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
+        </div>
+    </form>
+
+</div>
+
 {% endblock %}
