--- a/static/scss/_partials/portrait-mobile/pages/_cart-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_cart-page.scss
@@ -60,6 +60,6 @@
 
 .checkout-btn {
     font-family: $dosisFont;
-    font-size: 7.0vw;
-    width: 40%;
+    font-size: 16.0vw;
+    width: 40vw;
 }
