--- a/static/scss/_partials/portrait-mobile/pages/_wishlist-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_wishlist-page.scss
@@ -4,14 +4,14 @@
     min-height: 82vh;
 }
 
-.wishlist-remove-Btn {
+.wishlist-remove-btn {
     width: 8vw;
     position: absolute;
     left: 88.7%;
     color: rgb(189, 0, 0);
 }
 
-.wishlist-remove-Btn i {
+.wishlist-remove-btn i {
     font-size: 5.5vw;
 }
 
