--- a/static/scss/_partials/portrait-mobile/pages/_products-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_products-page.scss
@@ -9,6 +9,16 @@
     padding-bottom: 10vw;
 }
 
+.panel-default {
+    padding: 0 0;
+}
+
+.panel-body {
+    height: 100%;
+    border: 1px solid #ddd;
+    background-color: cornsilk;
+}
+
 .product-image {
     width: 50vw;
     height: 37.5vw;
@@ -32,10 +42,10 @@
 }
 
 .quickstats-key {
-    width: 40%;
+    width: 40vw;
 }
 
 .quickstats-value {
-    width: 60%;
+    width: 60vw;
 }
 
