--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -13,7 +13,7 @@
             <div class="panel-body">
 
 
-                <a class="wishlist-remove-Btn" href="{% url 'remove_from_wishlist' item.product.id %}"><i class="fa fa-times-circle"></i></a>
+                <a class="wishlist-remove-btn" href="{% url 'remove_from_wishlist' item.product.id %}"><i class="fa fa-times-circle"></i></a>
 
 
 
